refactor: Change dotnet core project to also pull newest major version @ignore

--- a/csharp/open_camera/OpenCamera.csproj
+++ b/csharp/open_camera/OpenCamera.csproj
@@ -20,9 +20,9 @@
   </Target>
 
   <ItemGroup>
-      <PackageReference Include="IDSImaging.Peak.AFL" Version="2.0.0.1" />
-      <PackageReference Include="IDSImaging.Peak.API" Version="1.13.0.1" />
-      <PackageReference Include="IDSImaging.Peak.IPL" Version="1.17.1.1" />
+      <PackageReference Include="IDSImaging.Peak.AFL" Version="2.*" />
+      <PackageReference Include="IDSImaging.Peak.API" Version="1.*" />
+      <PackageReference Include="IDSImaging.Peak.IPL" Version="1.*" />
   </ItemGroup>
 
 </Project>
