--- a/csharp/OpenCamera/OpenCameraFramework.csproj
+++ b/csharp/OpenCamera/OpenCameraFramework.csproj
@@ -24,9 +24,9 @@
     <DefineDebug>true</DefineDebug>
     <PlatformTarget>x86</PlatformTarget>
     <PlatformToolset>v143</PlatformToolset>
-    <AssemblyName>OpenCamera_debug</AssemblyName>
+    <AssemblyName>OpenCamera</AssemblyName>
     <StartAction>Program</StartAction>
-    <StartProgram>$(SolutionDir)$(OutputPath)OpenCamera_debug.exe</StartProgram>
+    <StartProgram>$(SolutionDir)$(OutputPath)OpenCamera.exe</StartProgram>
     <DebugType>full</DebugType>
     <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -52,9 +52,9 @@
     <DefineDebug>true</DefineDebug>
     <PlatformTarget>x64</PlatformTarget>
     <PlatformToolset>v143</PlatformToolset>
-    <AssemblyName>OpenCamera_debug</AssemblyName>
+    <AssemblyName>OpenCamera</AssemblyName>
     <StartAction>Program</StartAction>
-    <StartProgram>$(SolutionDir)$(OutputPath)OpenCamera_debug.exe</StartProgram>
+    <StartProgram>$(SolutionDir)$(OutputPath)OpenCamera.exe</StartProgram>
     <DebugType>full</DebugType>
     <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
