--- a/csharp/OpenCamera/OpenCamera.csproj
+++ b/csharp/OpenCamera/OpenCamera.csproj
@@ -10,6 +10,13 @@
     </RuntimeIdentifiers>
   </PropertyGroup>
 
+  <Target Name="ValidateCommandLine" BeforeTargets="ResolveAssemblyReferences">
+      <Error Text=" The 'Platform' property must be set on the command line."
+             Condition="'$(Platform)' == ''" />
+      <Error Text=" The 'Platform' property must not be set to Any/AnyCPU."
+             Condition="$(Platform.Contains('Any'))" />
+  </Target>
+
   <ItemGroup>
       <PackageReference Include="IDSImaging.Peak.API" Version="1.*" />
   </ItemGroup>
